@@ -78,6 +78,8 @@ Minor Changes:
    new location as appropriate. Patch by Padraic.
 
 Fixes:
+ * qregs, %0-%9 and $0-$9 would occasionally smash each other. Reported by
+   Cheetah@M*U*S*H. [GM]
  * No_Pay was implicit if executor is #1, but was _not_ implicit if 
    Owner(executor) was #1. Caused some obscure queue cost bugs.
    Discovered by Padraic@M*U*S*H. [GM]
